--- a/Css/stylecss.css
+++ b/Css/stylecss.css
@@ -32,15 +32,26 @@
     padding-bottom: 64px;
 }
 
+div.namen {
+  position: absolute;
+  left: 50px;
+  top: 150px;
+  width: 1000px;
+  background-color: blue;
+
+}
 div.Naam1{
-    position: absolute;
-    left: 50px;
-    top: 150px;
+  margin-left: 0px;
+    width: 100px;
+      background-color: red;
 }
 div.Naam2{
-    position: absolute;
-    left: 270px;
-    top: 150px;
+  margin-left: 300px;
+    width: 100px;
+    height: 50px;
+    margin-top: 0px;
+      background-color: green;
+
 }
 .Naam3{
     position: absolute;
