--- a/Css/Home.css
+++ b/Css/Home.css
@@ -3,3 +3,59 @@ h2 {
   font-family: "Arial";
 }
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+
+.header {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+
+.topnav {
+    overflow: hidden;
+    background-color: #D81E05;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+}
+
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
+}
