--- a/Css/Home.css
+++ b/Css/Home.css
@@ -78,3 +78,139 @@ body {
     transform: scale(1.75);
 }
 
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #D81E05;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
+
+.teamPadding {
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+div.namen {
+    position: absolute;
+    left: 50px;
+    top: 150px;
+    width: 1000px;
+    background-color: blue;
+
+}
+div.Naam1{
+    margin-left: 0px;
+    width: 100px;
+    background-color: red;
+}
+div.Naam2 {
+    margin-left: 300px;
+    width: 100px;
+    height: 50px;
+    margin-top: 0px;
+    background-color: green;
+}
+
+.Naam {
+    float: left;
+    width: 16.66%;
+    padding: 10px;
+    height: 340px;
+    box-sizing: border-box;
+    border: 3px dotted #D81E05;
+}
+
+.img{
+    border-radius: 10%;
+    width: 75%;
+    height: 60%;
+
+}
+
+.imgAbbas{
+    border-radius: 10%;
+    width: 70%;
+}
+
+.imgDanial{
+    border-radius: 10%;
+    width: 70%;
+}
+
+.imgMartin{
+    border-radius: 10%;
+    width: 70%;
+}
+.teamCenter {
+    text-align: center !important;
+}
+
+.onzeAfspraken {
+    border: 3px dotted #D81E05;
+    margin-top: 350px;
+}
+
+html, body {
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.voorwaaardenAfspraken {
+    text-align: center;
+}
+
+.paragraaf {
+    text-align: center;
+}
+
+li.regel1 {
+    margin-bottom: 10px;
+    margin-top: 50px;
+}
+
+li.regel2 {
+    margin-bottom: 10px;
+}
+
+li.regel3 {
+    margin-bottom: 10px;
+}
+
+li.regel4 {
+    margin-bottom: 10px;
+}
+
+li.regel5 {
+    margin-bottom: 10px;
+}
+
+li.regel6 {
+    margin-bottom: 10px;
+}
+
+li.regel7 {
+    margin-bottom: 10px;
+}
